z-index bug fixing

--- a/css/style.css
+++ b/css/style.css
@@ -685,19 +685,20 @@ video {
 .work .work-container > img {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 2;
 
     @media (min-width: 720px) {
         height: calc(100lvh - var(--header-height));
         object-fit: cover;
         object-position: top;
+        z-index: 1;
     } 
 }
 
 .work .work-container .description {
     background-color: rgba(0, 0, 0, 0.85);
     padding: 3.6rem;
-    z-index: 2;
+    z-index: 1;
 
     @media (min-width: 720px) {
         text-align: center;
@@ -705,6 +706,7 @@ video {
         margin: 6rem;
         padding: 6rem;
         position: relative;
+        z-index: 2;
 
     }
     @media (min-width: 480px) {
